refactor: 시트 헤더 키 정규화 처리